feat(api): bydel potential endpoint
